--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     ports: 
       - 6379:6379
     command: ["redis-server","--appendonly","yes"]
-    volumes:
-      - redis-data:/data
 
   redis-commander:
     image: rediscommander/redis-commander:latest
@@ -23,5 +21,22 @@ services:
     depends_on:
       - redis
 
-volumes:
-  redis-data:
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus.yml
+    command: "--config.file=/etc/prometheus.yml"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    depends_on:
+      - prometheus
+    ports: 
+      - 3000:3000
+
+  
